--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@
 *.app
 
 # Build Dir
-build/*
-!build/.gitkeep
+adk-build/*
+!adk-build/.gitkeep
 
 # CMake
 CMakeLists.txt.user
@@ -49,3 +49,7 @@ _deps
 
 # vscode
 .vscode
+
+# Regolith
+/build
+/.regolith
