--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_policy(SET CMP0074 NEW)
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
-  message(FATAL_ERROR "In-source builds not allowed. Please run CMake from the './adk-build' directory. You may need to remove CMakeCache.txt.")
+    message(FATAL_ERROR "In-source builds not allowed. Please run CMake from the './adk-build' directory. You may need to remove CMakeCache.txt.")
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
@@ -15,10 +15,16 @@ project(adk VERSION 0.1 LANGUAGES CXX)
 
 include_directories(include)
 add_executable(adk
-  Source.cpp
-  include/Block.h
-  include/Item.h
-  include/json.hpp
-  include/Registry.h
-  include/BlockProperty.h
+    Main.cpp
+    include/Block.h
+    include/Item.h
+    include/json.hpp
+    include/Registry.h
+    include/BlockProperty.h
+)
+
+include_directories(include/generator)
+add_executable(datagen
+    DataGen.cpp
+    include/generator/BlockState.h
 )
