Added Axis Block Class
- Allows for rotational blocks
- Changed `Block.h` to allow for inheritance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ project(adk VERSION 0.1 LANGUAGES CXX)
 include_directories(include)
 add_executable(adk
     Main.cpp
+    include/AxisBlock.h
     include/Block.h
     include/Item.h
     include/json.hpp
