--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,5 +33,8 @@ jobs:
       working-directory: ${{github.workspace}}/adk-build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run:
+        mkdir BP
+        mdkir RP
+        ctest -C ${{env.BUILD_TYPE}}
 
