--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,12 +29,11 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/adk-build --config ${{env.BUILD_TYPE}} --parallel
 
-    - name: Test
+    - name: Create BP/RP Folders
       working-directory: ${{github.workspace}}/adk-build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run:
-        mkdir BP
-        mdkir RP
-        ctest -C ${{env.BUILD_TYPE}}
+      run: mkdir BP RP
 
+    - name: Run Tests
+      run: ctest -C ${{env.BUILD_TYPE}}
