Added first test

--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -24,3 +24,15 @@ add_executable(datagen
     include/generator/BlockState.h
     include/generator/ItemState.h
 )
+
+enable_testing()
+
+include_directories(include)
+add_executable(BlockTest
+    test/BlockTest.cpp
+)
+
+add_test(
+    NAME BlockTest
+    COMMAND BlockTest
+)
