Forgo to add working directory to CI

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,4 +36,5 @@ jobs:
       run: mkdir BP RP
 
     - name: Run Tests
+      working-directory: ${{github.workspace}}/adk-build
       run: ctest -C ${{env.BUILD_TYPE}}
