--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,18 +23,18 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -S ${{github.workspace}}/adk/data -B ${{github.workspace}}/adk-build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -S . -B buil -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/adk-build --config ${{env.BUILD_TYPE}} --parallel
+      run: cmake --build buil --config ${{env.BUILD_TYPE}} --parallel
 
     - name: Create BP/RP Folders
-      working-directory: ${{github.workspace}}/adk-build
+      working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: mkdir BP RP
 
     - name: Run Tests
-      working-directory: ${{github.workspace}}/adk-build
+      working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}}
