--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,14 +20,17 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Get googletest
+      run: git clone https://github.com/google/googletest
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -S . -B buil -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build buil --config ${{env.BUILD_TYPE}} --parallel
+      run: cmake --build build --config ${{env.BUILD_TYPE}} --parallel
 
     - name: Create BP/RP Folders
       working-directory: ${{github.workspace}}/build
