--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,4 +40,6 @@ jobs:
 
     - name: Run Tests
       working-directory: ${{github.workspace}}/build
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: |
+        ctest -C ${{env.BUILD_TYPE}}
+        cat /home/runner/work/adk/adk/build/Testing/Temporary/LastTest.log
