--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,7 +36,9 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: mkdir BP RP
+      run: |
+        mkdir BP RP
+        cat build/CMakeCache.txt
 
     - name: Run Tests
       working-directory: ${{github.workspace}}/build
