--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -38,7 +38,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
         mkdir BP RP
-        cat build/CMakeCache.txt
+        cat CMakeCache.txt
 
     - name: Run Tests
       working-directory: ${{github.workspace}}/build
