--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,16 +33,11 @@ jobs:
       run: cmake --build build --config ${{env.BUILD_TYPE}} --parallel
 
     - name: Create BP/RP Folders
-      working-directory: ${{github.workspace}}/build
+      working-directory: ${{github.workspace}}/build/test
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: |
-        mkdir BP RP
-        cat CMakeCache.txt
+      run: mkdir BP RP
 
     - name: Run Tests
       working-directory: ${{github.workspace}}/build
       run: ctest -C ${{env.BUILD_TYPE}} --rerun-failed --output-on-failure
-
-    - name: Check log
-      run: cat /home/runner/work/adk/adk/build/Testing/Temporary/LastTest.log
