--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -19,12 +19,12 @@ add_executable(adk
 )
 
 include_directories(include)
-add_executable(recipe
+add_executable(recipegenerator
     RecipeGen.cpp
 )
 
 include_directories(include/generator)
-add_executable(datagen
+add_executable(datagenerator
     DataGen.cpp
     include/generator/BlockState.h
     include/generator/ItemState.h
