--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -14,22 +14,19 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 project(adk VERSION 0.1 LANGUAGES CXX)
 
 add_subdirectory(include/spdlog)
-include_directories(include/spdlog/include)
-include_directories(include)
+include_directories(include include/spdlog/include)
 add_executable(adk
     Main.cpp
 )
 
 add_subdirectory(include/spdlog)
-include_directories(include/spdlog/include)
-include_directories(include)
+include_directories(include include/spdlog/include)
 add_executable(recipegenerator
     RecipeGen.cpp
 )
 
 add_subdirectory(include/spdlog)
-include_directories(include/spdlog/include)
-include_directories(include/generator)
+include_directories(include include/spdlog/include)
 add_executable(datagenerator
     DataGen.cpp
     include/generator/BlockState.h
