--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,12 +20,11 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
-            - name: Get googletest
-              run: git clone https://github.com/google/googletest
-
-            - name: Get spdlog
-              working-directory: test/include
-              run: git clone https://github.com/gabime/spdlog
+            - name: Get dependencies
+              run: |
+                  git clone https://github.com/google/googletest
+                  cd ${{github.workspace}}/test/include
+                  git clone https://github.com/gabime/spdlog
 
             - name: Configure CMake
               # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
