--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -16,12 +16,12 @@ set(LIB_NAME adk-lib)
 
 project(${BIN_NAME} VERSION 0.1)
 
-find_package(spdlog REQUIRED)
-
 file(GLOB_RECURSE SRC_FILES *.cpp )
 file(GLOB_RECURSE HEADER_FILES include/*.h include/*.hpp)
 add_library(${LIB_NAME} STATIC ${SRC_FILES})
 file(COPY assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+add_subdirectory(third-party/spdlog)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -30,7 +30,7 @@ endif()
 target_include_directories(${LIB_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(${LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-target_link_libraries(${LIB_NAME} PRIVATE spdlog::spdlog)
+target_link_libraries(${LIB_NAME} spdlog)
 
 add_executable(${BIN_NAME} Main.cpp)
 
