--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,10 +12,7 @@ env:
 
 jobs:
     build:
-        # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-        # You can convert this to a matrix build if you need cross-platform coverage.
-        # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
 
         steps:
             - uses: actions/checkout@v4
@@ -25,7 +22,7 @@ jobs:
             - name: Configure CMake
               # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
               # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-              run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+              run: cmake --build build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
             - name: Build
               # Build your program with the given configuration
