--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,7 +7,6 @@ on:
         branches: ['main']
 
 env:
-    # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
     BUILD_TYPE: Release
 
 jobs:
@@ -20,9 +19,7 @@ jobs:
                 submodules: true
 
             - name: Configure CMake
-              # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-              # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-              run: cmake --build build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+              run: cmake -S . -B build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
             - name: Build
               # Build your program with the given configuration
