Separated into standalone and regolith filter
Moved .cpp files into src folder

--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -16,7 +16,7 @@ set(LIB_NAME adk-lib)
 
 project(${BIN_NAME} VERSION 0.1)
 
-file(GLOB_RECURSE SRC_FILES *.cpp )
+file(GLOB_RECURSE SRC_FILES src/*.cpp )
 file(GLOB_RECURSE HEADER_FILES include/*.h include/*.hpp)
 add_library(${LIB_NAME} STATIC ${SRC_FILES})
 file(COPY assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
@@ -32,7 +32,7 @@ target_include_directories(${LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_link_libraries(${LIB_NAME} spdlog)
 
-add_executable(${BIN_NAME} Main.cpp)
+add_executable(${BIN_NAME} src/Main.cpp)
 
 target_link_libraries(${BIN_NAME} PRIVATE ${LIB_NAME})
 target_include_directories(${BIN_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
