Added more item components

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,13 +9,13 @@ include_directories("${PROJECT_SOURCE_DIR}/adk/data/include")
 file(GLOB_RECURSE HEADER_FILES ${PROJECT_SOURCE_DIR}/adk/data/include/*.h ${PROJECT_SOURCE_DIR}/adk/data/include/*.hpp)
 file(COPY ${PROJECT_SOURCE_DIR}/adk/data/assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${PROJECT_SOURCE_DIR}/test/files DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-add_subdirectory(${PROJECT_SOURCE_DIR}/adk/data/third-party/spdlog spdlog)
+find_package(spdlog REQUIRED)
 
 add_executable(main AdkTest.cpp)
 target_link_libraries(main gtest)
 
 add_executable(BlockTest BlockTest.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/GlobalRegistry.cpp ${HEADER_FILES})
-target_link_libraries(BlockTest gtest gmock_main spdlog)
+target_link_libraries(BlockTest PRIVATE gtest gmock_main spdlog::spdlog)
 add_test(NAME BlockTest COMMAND BlockTest)
 
 #add_test(
