Finished Item Class

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,23 +16,8 @@ target_link_libraries(main gtest)
 
 add_executable(BlockTest BlockTest.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/registry_global.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/utility/logger.cpp ${HEADER_FILES})
 target_link_libraries(BlockTest PRIVATE gtest gmock_main spdlog::spdlog)
+add_executable(ItemTest ItemTest.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/registry_global.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/utility/logger.cpp ${HEADER_FILES})
+target_link_libraries(ItemTest PRIVATE gtest gmock_main spdlog::spdlog)
+
 add_test(NAME BlockTest COMMAND BlockTest)
-
-#add_test(
-#    NAME BlockTest
-#    COMMAND BlockTest
-#)
-
-#add_executable(ItemTest
-#    ItemTest.cpp
-#    GlobalRegistry.cpp
-#    ${Headers})
-#target_link_libraries(ItemTest PUBLIC
-#    gtest_main
-#    adkhead
-#)
-
-#add_test(
-#    NAME ItemTest
-#    COMMAND ItemTest
-#)
+add_test(NAME ItemTest COMMAND ItemTest)
