--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -20,8 +20,11 @@ file(GLOB_RECURSE SRC_FILES src/*.cpp )
 file(GLOB_RECURSE HEADER_FILES include/*.h include/*.hpp)
 add_library(${LIB_NAME} STATIC ${SRC_FILES})
 file(COPY assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
-find_package(spdlog REQUIRED)
+if(GITHUB_ACTION)
+	add_subdirectory(third-party/spdlog)
+else()
+	find_package(spdlog REQUIRED)
+endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -29,7 +32,12 @@ endif()
 
 target_include_directories(${LIB_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(${LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_link_libraries(${LIB_NAME} PRIVATE spdlog::spdlog)
+if(GITHUB_ACTION)
+	target_link_libraries(${LIB_NAME} spdlog)
+else()
+	target_link_libraries(${LIB_NAME} PRIVATE spdlog::spdlog)
+endif()
+
 
 add_executable(${BIN_NAME} src/Main.cpp)
 target_link_libraries(${BIN_NAME} PRIVATE ${LIB_NAME})
