Fixed build errors

--- a/adk/data/CMakeLists.txt
+++ b/adk/data/CMakeLists.txt
@@ -13,13 +13,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(GITHUB_ACTION "Are you running on GitHub Actions?" OFF)
 
 set(BIN_NAME adk)
-set(LIB_NAME adk-lib)
 
 project(${BIN_NAME} VERSION 0.1)
 
+include_directories("include")
 file(GLOB_RECURSE SRC_FILES src/*.cpp )
 file(GLOB_RECURSE HEADER_FILES include/*.h include/*.hpp)
-add_library(${LIB_NAME} STATIC ${SRC_FILES})
 file(COPY assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 if(GITHUB_ACTION)
 	add_subdirectory(third-party/spdlog)
@@ -31,15 +30,9 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 endif()
 
-target_include_directories(${LIB_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
-target_include_directories(${LIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
+add_executable(${BIN_NAME} ${SRC_FILES} ${HEADER_FILES})
 if(GITHUB_ACTION)
-	target_link_libraries(${LIB_NAME} spdlog)
+	target_link_libraries(${BIN_NAME} spdlog)
 else()
-	target_link_libraries(${LIB_NAME} PRIVATE spdlog::spdlog)
+	target_link_libraries(${BIN_NAME} PRIVATE spdlog::spdlog)
 endif()
-
-
-add_executable(${BIN_NAME} src/Main.cpp)
-target_link_libraries(${BIN_NAME} PRIVATE ${LIB_NAME})
-target_include_directories(${BIN_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
