Hopefully fixes GH actions?

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,4 +27,4 @@ jobs:
 
             - name: Run Tests
               working-directory: ${{github.workspace}}/build
-              run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+              run: ctest -C ${{env.BUILD_TYPE}} --extra-verbose --output-on-failure
