Fixed build errors

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,7 +27,7 @@ if(GITHUB_ACTION)
 else()
 	target_link_libraries(BlockTest PRIVATE gtest gmock_main spdlog::spdlog)
 endif()
-add_executable(ItemTest ItemTest.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/registry_global.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/utility/logger.cpp ${HEADER_FILES})
+add_executable(ItemTest ItemTest.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/registry_global.cpp ${PROJECT_SOURCE_DIR}/adk/data/src/utility/logger.cpp ${HEADER_FILES}  ${SOURCE_FILES})
 if(GITHUB_ACTION)
 	target_link_libraries(ItemTest gtest gmock_main spdlog)
 else()
